minor dark mode fixes, added dark theme for ace editor

--- a/src/Resources/app/administration/src/main.scss
+++ b/src/Resources/app/administration/src/main.scss
@@ -27,7 +27,7 @@
 }
 
 body.is-dark-mode {
-    .sw-modal__dialog,
+    .sw-modal,
     .sw-popover__wrapper,
     .sw-desktop__content {
         @include colorOverwrites($dark-bg-color, $dark-text-color, $dark-border-color);
